--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
       continue-on-error: true
 
     - name: Run tests
-      run: pytest tests/ -v --cov=fastapikit --cov-report=xml
+      run: pytest tests/ -v --cov=fastapi_bootstrap --cov-report=xml
 
     - name: Upload coverage
       uses: codecov/codecov-action@v3
