fix: address second round of PR review comments
- Fix error double-counting bug in metrics.py (if-elif instead of if-or)
- Document chunked transfer encoding limitation in MaxRequestSizeMiddleware
- Document mask_sensitive_data implicit dependency on get_settings()
- Document router property preservation limitation in builder.py
- Add test cache isolation in test_config.py
- Add package naming clarification in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ requires = ["setuptools>=65.0", "setuptools-scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
+# Distribution name uses underscore for backward compatibility
+# pip install fastapi-bootstrap (hyphen) also works
+# Python import: import fastapi_bootstrap
 name = "fastapi_bootstrap"
 version = "0.0.dev"  # Auto-updated by GitHub Actions when tag is pushed
 description = "🚀 Easy FastAPI Setup Kit - Production-ready FastAPI boilerplate with logging, error handling, metrics, security headers, and more"
