--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ requires = ["setuptools>=65.0", "setuptools-scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
-# Distribution name uses underscore for backward compatibility
-# pip install fastapi-bootstrap (hyphen) also works
-# Python import: import fastapi_bootstrap
-name = "fastapi_bootstrap"
+# Distribution name: fastapi-bootstrap (PyPI convention with hyphen)
+# Python import name: fastapi_bootstrap (underscore)
+# pip install fastapi-bootstrap
+name = "fastapi-bootstrap"
 version = "0.0.dev"  # Auto-updated by GitHub Actions when tag is pushed
 description = "🚀 Easy FastAPI Setup Kit - Production-ready FastAPI boilerplate with logging, error handling, metrics, security headers, and more"
 readme = "README.md"
