feat: simplify create_app() API with unified BootstrapSettings
BREAKING CHANGE: create_app() signature changed from 21 params to 6 params

- Rename api_list to routers

- Move all config to BootstrapSettings (title, version, stage, cors, docs, etc.)

- Add DocsSettings, SecuritySettings to BootstrapSettings

- Keep exception_handlers as keyword argument for runtime callbacks

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,3 +100,8 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 addopts = "-v --cov=fastapi_bootstrap --cov-report=term-missing"
 asyncio_mode = "auto"
+
+[dependency-groups]
+dev = [
+    "ty>=0.0.11",
+]
