--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish to PyPI
 on:
   push:
     tags:
-      - '*'  # v0.1.0, 0.1.1, v1.0, etc.
+      - '*'
 
 permissions:
   contents: write
@@ -19,60 +19,33 @@ jobs:
       id: version
       run: |
         TAG=${GITHUB_REF#refs/tags/}
-        VERSION=${TAG#v}  # Remove 'v' prefix if exists
+        VERSION=${TAG#v}
         echo "tag=$TAG" >> $GITHUB_OUTPUT
         echo "version=$VERSION" >> $GITHUB_OUTPUT
 
     - name: Update pyproject.toml with version
       run: |
         sed -i 's/^version = ".*"/version = "${{ steps.version.outputs.version }}"/' pyproject.toml
-        cat pyproject.toml | grep -A 2 "\[project\]"
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
       with:
         python-version: '3.12'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build twine
-
-    - name: Build distribution
-      run: python -m build
+    - name: Build
+      run: uv build
 
     - name: Check metadata
-      run: twine check dist/*
+      run: uvx twine check dist/*
 
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
 
-    - name: Create Release Notes
-      id: release_notes
-      run: |
-        cat > RELEASE_NOTES.md << 'EOF'
-        ## 🚀 fastapi_bootstrap v${{ steps.version.outputs.version }}
-
-        **Installation:**
-        ```bash
-        pip install fastapi_bootstrap
-        ```
-
-        **What's Changed:**
-        See [CHANGELOG.md](https://github.com/bestend/fastapi_bootstrap/blob/main/CHANGELOG.md) for details.
-
-        **Happy coding! 🚀**
-        EOF
-        cat RELEASE_NOTES.md
-
     - name: Create GitHub Release
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         files: dist/*
-        body_path: RELEASE_NOTES.md
-        draft: false
-        prerelease: false
+        generate_release_notes: true
         token: ${{ secrets.GITHUB_TOKEN }}
-
