--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,23 +42,9 @@ auth = [
     "python-jose[cryptography]>=3.3.0",
     "httpx>=0.26.0",
 ]
-metrics = [
-    # Future: prometheus-client if needed
-]
 all = [
     "python-jose[cryptography]>=3.3.0",
     "httpx>=0.26.0",
-]
-dev = [
-    "pytest>=8.0.0",
-    "pytest-cov>=4.1.0",
-    "pytest-asyncio>=0.23.0",
-    "pytest-mock>=3.12.0",
-    "httpx>=0.26.0",
-    "ruff>=0.2.0",
-    "mypy>=1.8.0",
-    "types-PyYAML>=6.0.12",
-    "python-jose[cryptography]>=3.3.0",
 ]
 
 [project.urls]
@@ -76,32 +62,34 @@ fastapi_bootstrap = ["py.typed"]
 
 [tool.ruff]
 line-length = 100
-target-version = "py312"
 
 [tool.ruff.lint]
 select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
 ignore = [
     "N818", "N806", "N814",
-    "E501",  # Line too long
+    "E501",
     "B904", "B007",
     "SIM117",
 ]
 
-[tool.mypy]
-python_version = "3.12"
-warn_return_any = false
-warn_unused_configs = true
-disallow_untyped_defs = false
-ignore_missing_imports = true
-check_untyped_defs = false
+[tool.ty.environment]
+python-version = "3.12"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
 addopts = "-v --cov=fastapi_bootstrap --cov-report=term-missing"
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 [dependency-groups]
 dev = [
-    "ty>=0.0.11",
+    "httpx>=0.28.0",
+    "pre-commit>=4.3.0",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.12.0",
+    "python-jose[cryptography]>=3.3.0",
+    "ruff>=0.11.0",
 ]
