--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,10 @@ jobs:
       run: |
         sed -i 's/^version = ".*"/version = "${{ steps.version.outputs.version }}"/' pyproject.toml
 
+    - name: Update __init__.py with version
+      run: |
+        sed -i 's/^__version__ = ".*"/__version__ = "${{ steps.version.outputs.version }}"/' src/fastapi_bootstrap/__init__.py
+
     - name: Install uv
       uses: astral-sh/setup-uv@v5
       with:
@@ -43,9 +47,29 @@ jobs:
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
 
+    - name: Create Release Notes
+      id: release_notes
+      run: |
+        cat > RELEASE_NOTES.md << 'EOF'
+        ## fastapi-bootstrap v${{ steps.version.outputs.version }}
+
+        **Installation:**
+        ```bash
+        pip install fastapi-bootstrap
+        ```
+
+        **What's Changed:**
+        See [CHANGELOG.md](https://github.com/bestend/fastapi_bootstrap/blob/main/CHANGELOG.md) for details.
+
+        **Happy bootstrapping!**
+        EOF
+        cat RELEASE_NOTES.md
+
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
       with:
         files: dist/*
-        generate_release_notes: true
+        body_path: RELEASE_NOTES.md
+        draft: false
+        prerelease: false
         token: ${{ secrets.GITHUB_TOKEN }}
