--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Framework :: FastAPI",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
@@ -85,11 +86,9 @@ asyncio_default_fixture_loop_scope = "function"
 [dependency-groups]
 dev = [
     "httpx>=0.28.0",
-    "pre-commit>=4.3.0",
     "pytest>=9.0.2",
     "pytest-asyncio>=1.3.0",
     "pytest-cov>=7.0.0",
     "pytest-mock>=3.12.0",
     "python-jose[cryptography]>=3.3.0",
-    "ruff>=0.11.0",
 ]
