--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
     "fastapi>=0.109.0",
     "uvicorn>=0.27.0",
     "pydantic>=2.5.0",
-    "loguru>=0.7.2",
+    "loguru-kit>=0.7.0",
     "opentelemetry-api>=1.22.0",
     "PyYAML>=6.0.1",
 ]
